add self request user
